2005-01-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceundomanager.c
	(gtk_source_undo_manager_insert_text_handler): fixed 
	bug #141993 (Text insertion undo manager should not assume text length).
	Thanks to Theppitak Karoonboonyanan <thep@linux.thai.net>.

2005-01-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceview.c (compute_indentation)
	(key_press_cb): fixed a problem with indentation when
	you try to indent a line starting with a space and the cursor
	is put before the last space character. 
	Also fixed bug #154039 (gedit cannot determine Japanese input 
	when autoindent is enable). 
	Thanks to Takao Fujiwara <Takao.Fujiwara@Sun.COM> and
	Choe Hwanjin <choe.hwanjin@gmail.com>.

2005-01-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/R.lang: fixed bug #163971 ("Assign 
	operator" should perhaps be "Assignment operator" in gtksourceview)

2005-01-22  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceundomanager.c
	(gtk_source_undo_manager_init) (gtk_source_undo_manager_finalize)
	(gtk_source_undo_manager_new) (gtk_source_undo_manager_undo)
	(gtk_source_undo_manager_redo)
	(gtk_source_undo_manager_free_action_list)
	(gtk_source_undo_manager_insert_text_handler)
	(gtk_source_undo_manager_delete_range_handler)
	(gtk_source_undo_manager_add_action)
	(gtk_source_undo_manager_free_first_n_actions)
	(gtk_source_undo_manager_check_list_size)
	(gtk_source_undo_manager_merge_action)
	(gtk_source_undo_manager_set_max_undo_levels)
	(gtk_source_undo_manager_modified_changed_handler): fixed bug 
	#132828 (Undoing/Redoing to a non-modified state should unset modified)

=== gtksourceview 1.1.90 ===

2005-01-12  Paolo Maggi  <paolo@gnome.org>

	* README: updated

2005-01-11  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/gtkrc.lang: add syntax highlighting
	support for GtkRC. Patch by Link M Dupont <link@subpop.net> and
	Andrew Johnson <acjgenius@earthlink.net>

2005-01-11  Paolo Maggi  <paolo@gnome.org>